--- a/style.css
+++ b/style.css
@@ -59,13 +59,13 @@ width:100px;
      background-color: #b8e2f2;
     height:200px;
     width:100px;
-} */.container{
+/* } * .container{
     display:flex;
     height:600px;
     width:1000px;
     background-color:aqua;
     border:1px solid black;
-    /* flex-direction:column-reverse; */
+    flex-direction:column-reverse;
     flex-wrap:wrap;
     justify-content:center;
     align-items:center;
@@ -85,4 +85,38 @@ width:100px;
     order:-1;
     flex-grow:2;
     align-self:flex-end;
-}
+} */
+ .container{
+    display:grid;
+    height:500px;
+    width:1000px;
+    background-color:aqua;
+    border:1px solid black;
+     /* grid-template-columns:1fr 1fr 1fr 1fr; */
+     grid-template-columns: repeat(4,1fr);
+     grid-template-rows:repeat(3,1fr);
+    /* grid-template-areas: "header header header header""main main . sidebar""footer footer footer footer"; */
+    column-gap:10px;
+    justify-items:center;
+ }
+ .item{
+    height:100px;
+    width:100px;
+    background-color:chocolate;
+    border:1px solid black;
+    text-align:center;
+    align-content:center;
+    color:white;
+ }
+ /* .item1{
+    grid-area:header;
+ }
+ .item2{
+    grid-area:main;
+ }
+ .item3{
+    grid-area:sidebar;
+ }
+    .item4{
+        grid-area:footer;
+    } */
