grid child properties

--- a/style.css
+++ b/style.css
@@ -93,16 +93,20 @@ width:100px;
     background-color:aqua;
     border:1px solid black;
      /* grid-template-columns:1fr 1fr 1fr 1fr; */
-     grid-template-columns: repeat(4,1fr);
-     grid-template-rows:repeat(3,1fr);
+     /* grid-template-columns: repeat(4,1fr);
+     grid-template-rows:repeat(3,1fr); */
+     grid-template-columns: repeat(4,100px);
+     grid-template-rows:repeat(3,100px);
     /* grid-template-areas: "header header header header""main main . sidebar""footer footer footer footer"; */
-    column-gap:10px;
+    /* column-gap:10px; */
     justify-items:center;
+    justify-content:center;
+    align-content:center;
  }
  .item{
     height:100px;
     width:100px;
-    background-color:chocolate;
+    background-color:rgb(101, 212, 175);
     border:1px solid black;
     text-align:center;
     align-content:center;
