--- a/style.css
+++ b/style.css
@@ -86,20 +86,20 @@ width:100px;
     flex-grow:2;
     align-self:flex-end;
 } */
- .container{
+ /* .container{
     display:grid;
     height:500px;
     width:1000px;
     background-color:aqua;
-    border:1px solid black;
+    border:1px solid black; */
      /* grid-template-columns:1fr 1fr 1fr 1fr; */
      /* grid-template-columns: repeat(4,1fr);
      grid-template-rows:repeat(3,1fr); */
-     grid-template-columns: repeat(4,100px);
-     grid-template-rows:repeat(3,100px);
+     /* grid-template-columns: repeat(4,100px);
+     grid-template-rows:repeat(3,100px); */
     /* grid-template-areas: "header header header header""main main . sidebar""footer footer footer footer"; */
     /* column-gap:10px; */
-    justify-items:center;
+    /* justify-items:center;
     justify-content:center;
     align-content:center;
  }
@@ -111,7 +111,7 @@ width:100px;
     text-align:center;
     align-content:center;
     color:white;
- }
+ } */
  /* .item1{
     grid-area:header;
  }
@@ -124,3 +124,37 @@ width:100px;
     .item4{
         grid-area:footer;
     } */
+     /* @media(max-width:768px)
+    {
+    p{
+        font-size:25px;
+    }
+    }
+    .box{
+        width:200px;
+        height:200px;
+        background-color:red;
+    }
+    @media(min-width:768px)
+    {
+            .box{
+            background-color:blue;
+            }
+        }
+        nav ul{
+            display:flex;
+            justify-content:space-around;
+            background-color:yellow;
+        } */
+         .content{
+            width:10px;
+            height:10px;
+            background-color:blue;
+         }
+  @media(min-width:768px){
+        .content{
+    width:200px;
+    height:200px;
+    background-color:red;
+                }
+            }
