--- a/style.css
+++ b/style.css
@@ -146,7 +146,7 @@ width:100px;
             justify-content:space-around;
             background-color:yellow;
         } */
-         .content{
+         /* .content{
             width:10px;
             height:10px;
             background-color:blue;
@@ -157,4 +157,51 @@ width:100px;
     height:200px;
     background-color:red;
                 }
-            }
+            } */
+             body{
+    margin:0;
+    font-family: Arial,sans serif;
+             }
+nav{
+    display:flex;
+    justify-content: space-between;
+    align-items:center;
+    background:black;
+    padding: 1rem;   
+}
+.logo{
+    color:white;
+    font-size:1.5 rem;
+}
+.menu{
+    display:none;
+    flex-direction: column;
+    background: #4444;
+    position: absolute;
+    top: 60px;
+    right:20px;
+    width:200px;
+}
+.menu a{
+    color:#fff;
+    padding:1em;
+    text-decoration: none;
+    display:block;
+}
+.hamburger{
+    font-size:2rem;
+    color:white;
+    cursor:pointer;
+}
+@media(min-width:768px){
+    .menu{
+        display:flex;
+        flex-direction: row;
+        position:static;
+        background:none;
+        width:auto;
+    }
+    .hamburger{
+        display:none;
+}
+}
